flexbox wrap fix

--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ p {
 .skills_list {
   padding-top: 20px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
 }
@@ -124,6 +125,7 @@ p {
 .skills_item {
   height: 130px;
   width: 130px;
+  margin: 20px;
   display: flex;
   justify-content: center;
   align-items: center; /* Had some issues centering the img inside the div but it seems that flexbox was the faster way to achieve it */
@@ -147,7 +149,7 @@ p {
 
 .ptfolio_content {
   height: 100%;
-  width: calc(100% - 30px);
+  max-width: calc(100% - 30px);
   margin: auto;
   color: var(--udadarkblue);
 }
@@ -155,6 +157,7 @@ p {
 .ptfolio_list {
   padding-top: 20px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
 }
@@ -167,6 +170,7 @@ p {
   border-radius: 7px;
   box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
   display: flex;
+  margin: 25px;
   justify-content: center;
   align-items: center;
 }
